Atualizado para Dezembro

--- a/Curriculum/Gabriel_Ligoski_CV_mes_2021EN.tex
+++ b/Curriculum/Gabriel_Ligoski_CV_mes_2021EN.tex
@@ -14,13 +14,14 @@
 \vspace{15mm}
 \section{\faFileText}{SUMMARY}
 I'm an undergraduate student in Bachelor of Computer Science (BCompSc) at the University of Brasília (UnB). I have passion for new technologies and I´m always searching for new challenges and getting new knowledge.
+My greatest achievement was making a multiplayer pinball in assembly.
 
 \vspace{5mm}
 
 \begin{multicols}{2}
 \section{\faPencil}{WORK}
     
-\work{FullStack Intern / May 2021 - Today}%
+\work{FullStack Intern / May 2021 - October 2021}%
     {Vobys}%
     {I worked as a fullstack developer using React as frontend \& Java Spring as backend.
     Developing a management platform.}%
