--- a/Curriculum/Gabriel_Ligoski_CV_mes_2021PT.tex
+++ b/Curriculum/Gabriel_Ligoski_CV_mes_2021PT.tex
@@ -23,7 +23,7 @@ Minha maior proeza foi fazer um pinball multiplayer em assembly.
 \begin{multicols}{2}
 \section{\faPencil}{EXPERIÊNCIA}
     
-\work{Estágio FullStack / Maio 2021 }%
+\work{Estágio FullStack / Maio 2021 - Outubro 2021 }%
     {Vobys}%
     {Trabalhei como desenvolvedor fullstack utilizando React no frontend
      \ e Java Spring como backend no desenvolvimento de uma plataforma de gestão.}%
